--- a/Layouts/FloatingElements/index.html
+++ b/Layouts/FloatingElements/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <article class="tweet">
+    <article class="tweet clearfix">
         <div class="avatar"></div>
         <p>Lorem ipsum dolor sit amet.</p>
         <!-- <p class="clear">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod praesentium obcaecati distinctio
