--- a/Typography/FontServices/css/styles.css
+++ b/Typography/FontServices/css/styles.css
@@ -10,7 +10,6 @@
 }
 
 @font-face {
-    /* this is a custom name for the font  */
     font-family: 'opensans';
     src: url('fonts/open-sans/opensans-regular-webfont.woff2') format('woff2'),
          url('fonts/open-sans/opensans-regular-webfont.woff') format('woff');
@@ -25,12 +24,12 @@ html{
 
 body{
     margin: 10px;
-    /* we can use the embedded font now  */
-    font-family:'opensans',Arial, Helvetica, sans-serif ;
+    /* using the custom font from google  */
+    font-family:'Open Sans',Arial, Helvetica, sans-serif ;
 }
 
 h1{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 p{
