--- a/TTA/Animations/css/styles.css
+++ b/TTA/Animations/css/styles.css
@@ -9,20 +9,39 @@ body{
     align-items: center;
 }
 
+@keyframes pop{
+    0%{
+        transform: scale(1);
+    }
+
+    25%{
+        transform: scale(1.3);
+    }
+
+    50%{
+        transform: rotate(45deg);
+        background: tomato;
+    }
+
+    100%{
+        transform: rotate(0);
+    }
+}
+
 .box{
     width: 100px;
     height: 100px;
     background-color: gold;
-    /* * here we are targeting the property we want to animate and for how long */
-    /* * we supplied a timing function to change the animation progress rate */
-    /* * we aslo supplied a delay to the animation after the timing function */
-    /* * animating multiple properties we seperate them with commas */
-    transition:transform 0.5s cubic-bezier(.68,.51,0,.63) 1s, 
-    background 0.5s ease-in 1s;
+    /* * here we are choosing the keyframe we want to use  */
+    animation-name: pop;
+    /* ! this is important we need this property or the animation will not work */
+    animation-duration:4s ;
+    /* * this will delay the animation */
+    animation-delay: 1s;
+    /* * this controls how many times we run the animation */
+    animation-iteration-count: infinite;
+    animation-timing-function:ease-out;
+    animation-direction: alternate;
 }
 
-.box:hover{
-    transform: rotate(45deg);
-    background-color: dodgerblue;
-}
 
