--- a/TTA/Exercise/css/styles.css
+++ b/TTA/Exercise/css/styles.css
@@ -17,3 +17,8 @@ body{
     background: rgb(116,214,144);
     background: linear-gradient(0deg, rgba(116,214,144,1) 0%, rgba(92,191,187,0.9850315126050421) 80%);
 }
+
+
+.card:hover{
+    
+}
