--- a/TTA/Exercise/css/styles.css
+++ b/TTA/Exercise/css/styles.css
@@ -20,5 +20,11 @@ body{
 
 
 .card:hover{
-    
+    transform: rotate(0);  
+}
+
+img{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
 }
